toggle circled image effect

--- a/assets/app.html
+++ b/assets/app.html
@@ -87,6 +87,9 @@
           <option value="16">16</option>
           <option value="32">32</option>
         </select>
+      <li>
+        <div class="description">Circled image</div>
+        <div class="value switch"><input type="checkbox" id="appearance-circled-image"><label for="appearance-circled-image"></label></div>
     </ul>
   </article>
   <article>
