--- a/assets/app.html
+++ b/assets/app.html
@@ -22,7 +22,7 @@
       <svg class=header-icon width="40" height="40" viewBox="0 0 200 200">
         <path class="stroke" d="M 100,40 160,100 160,160 40,160 40,100 z"/>
       </svg>
-    <li id=menu-settings class=header-item>
+    <li id=menu-system class=header-item>
       <svg class=header-icon width="40" height="40" viewBox="0 0 200 200">
         <path class="stroke"
          d="M 100,30 100,60 z
@@ -59,23 +59,23 @@
     </div>
   </div>
 </section>
-<section id="config" class="scrollable tabbed">
-  <nav id="config-nav" class="scrollable-tab">
+<section id="system" class="scrollable tabbed">
+  <nav id="system-nav" class="scrollable-tab">
     <div class="tab-items">
-      <button class="tab-item" id="tab-config" type="button">Configuration</button>
-      <button class="tab-item" id="tab-info" type="button">Information</button>
+      <button class="tab-item" id="system-tab-preferences" type="button">Preferences</button>
+      <button class="tab-item" id="system-tab-info" type="button">Information</button>
     </div>
   </nav>
-  <article id="config-config" class="tab-page">
-    <h1>Configuration</h1>
-    <article id="config-system">
+  <article id="system-preferences" class="tab-page">
+    <h1>Preferences</h1>
+    <article>
       <h3>System</h3>
       <ul class=note>
         <li>
           <button id=system-reload class="value button-simple" type="button">Reload Application</button>
       </ul>
     </article>
-    <article id="config-appearance">
+    <article>
       <h3>Appearance</h3>
       <ul class=note>
         <li>
@@ -138,7 +138,7 @@
       <ul class="devices note"></ul>
     </article>
   </article>
-  <article id="config-info" class="tab-page">
+  <article id="system-info" class="tab-page">
     <h1>vv</h1>
     <img class=modal-about-img src="/assets/app.svg">
     <table class=modal-window-table>
