--- a/assets/app.html
+++ b/assets/app.html
@@ -141,23 +141,21 @@
   </article>
   <article id="system-stats" class="tab-page">
     <h1>mpd</h1>
-    <table>
-      <tr>
-        <th>tracks:</th><td id=stat-tracks></td>
-      </tr>
-        <th>artists:</th><td id=stat-artists></td>
-      </tr>
-        <th>albums:</th><td id=stat-albums></td>
-      </tr>
-        <th>total length:</th><td id=stat-db-playtime></td>
-      </tr>
-        <th>total playtime:</th><td id=stat-playtime></td>
-      </tr>
-        <th>uptime:</th><td id=stat-uptime></td>
-      </tr>
-        <th>last library update:</th><td id=stat-db-update></td>
-      </tr>
-    </table>
+    <ul class=note>
+      <li>
+        <div class="description">tracks:</div><div class="value" id=stat-tracks></div>
+      <li>
+        <div class="description">artists:</div><div class="value" id=stat-artists></div>
+      <li>
+        <div class="description">albums:</div><div class="value" id=stat-albums></div>
+      <li>
+        <div class="description">total length:</div><div class="value" id=stat-db-playtime></div>
+      <li>
+        <div class="description">total playtime:</div><div class="value" id=stat-playtime></div>
+      <li>
+        <div class="description">uptime:</div><div class="value" id=stat-uptime></div>
+      <li>
+        <div class="description">last library update:</div><div class="value" id=stat-db-update></div>
   </article>
   <article id="system-info" class="tab-page">
     <h1>vv</h1>
