add .control-button class

--- a/assets/app.html
+++ b/assets/app.html
@@ -201,32 +201,32 @@
 <footer class=background-overlay>
   <nav id="control">
     <nav id="control-playback">
-      <button id=control-prev class=prev type="button" value="prev">
+      <button class=control-button id=control-prev class=prev type="button" value="prev">
         <svg width="200" height="200" viewBox="0 0 200 200">
           <path class="fill" d="M 155,60 85,100 155,140 z M 105,60 35,100 105,140 z"/>
         </svg>
       </button>
-      <button id=control-toggleplay class=play type="button" value="play/pause">
+      <button class=control-button id=control-toggleplay class=play type="button" value="play/pause">
         <svg width="200" height="200" viewBox="0 0 200 200">
           <path class="fill play" d="M 70,60 140,100 70,140 z"/>
           <path class="fill pause" d="M 75,60 85,60 85,140 75,140 z M 125,60 115,60 115,140 125,140 z"/>
           <path class="stroke play_circle" d="M 25,100 A 75,75 0 1,1 175,100 A 75,75 0 1,1 25,100 z"/>
         </svg>
       </button>
-      <button id=control-next class=next type="button" value="next">
+      <button class=control-button id=control-next class=next type="button" value="next">
         <svg width="200" height="200" viewBox="0 0 200 200">
           <path class="fill" d="M 45,60 115,100 45,140 z M 95,60 165,100 95,140 z"/>
         </svg>
       </button>
     </nav>
     <input id=control-volume type="range" min=0 max=100 step=1>
-    <button id=control-repeat class="repeat on">
+    <button class=control-button id=control-repeat class="repeat on">
       <svg width="200" height="200" viewBox="0 0 200 200">
         <path class=fill d="M 85,25 115,40 85,55 z"/>
         <rect class=stroke x="40" y="40" width="120" height="120" rx="30" ry="30"/>
       </svg>
     </button>
-    <button id=control-random class="random on">
+    <button class=control-button id=control-random class="random on">
       <svg width="200" height="200" viewBox="0 0 200 200">
         <path class=fill d="M 155,25 185,40 155,55 z M 155,145 185,160 155,175 z"/>
         <path class=stroke d="M 40,40 A 60,60 0 1,1 40,160 M 160,160 A 60,60 0 1,1 160,40 "/>
