--- a/assets/app.html
+++ b/assets/app.html
@@ -6,6 +6,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="Music">
+<link rel="apple-touch-icon" sizes="192x192" href="/assets/app.png">
+<meta name="mobile-web-app-capable" content="yes">
+<link rel="icon" sizes="192x192" href="/assets/app.png">
 <link rel="stylesheet" type="text/css" href="/assets/app.css">
 <script src="/assets/app.js"></script>
 <title>vv</title>
