--- a/assets/app.html
+++ b/assets/app.html
@@ -174,6 +174,12 @@
         <th class=modal-window-tablekey>License:</th><td class=modal-window-table-value><a class=value href="https://github.com/meiraka/vv/blob/master/LICENSE">MIT License</a></td>
       </tr>
     </table>
+    <h1>renderer</h1>
+    <table class=modal-window-table>
+      <tr class=modal-window-tableitem>
+        <th class=modal-window-tablekey>Version:</th><td id=user-agent class=modal-window-table-value></td>
+      </tr>
+    </table>
   </article>
 </section>
 <article id="error">
