remove table from info panel

--- a/assets/app.html
+++ b/assets/app.html
@@ -162,24 +162,22 @@
   </article>
   <article id="system-info" class="tab-page">
     <h1>vv</h1>
-    <img class=modal-about-img src="/assets/app.svg">
-    <table class=modal-window-table>
-      <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey>Version:</th><td id=version class=modal-window-table-value>0.0.0</td>
-      </tr>
-      <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey>Website:</th><td class=modal-window-table-value><a class=value href="https://github.com/meiraka/vv">https://github.com/meiraka/vv</a></td>
-      </tr>
-      <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey>License:</th><td class=modal-window-table-value><a class=value href="https://github.com/meiraka/vv/blob/master/LICENSE">MIT License</a></td>
-      </tr>
-    </table>
+    <ul class=note>
+      <li>
+        <div class="description">Version:</div>
+        <div id=version class="value">0.0.0</div>
+      <li>
+        <div class="description">Website:</div>
+        <div class="value"><a class=value href="https://github.com/meiraka/vv">https://github.com/meiraka/vv</a></div>
+      <li>
+        <div class="description">License:</div>
+        <div class="value"><a class=value href="https://github.com/meiraka/vv/blob/master/LICENSE">MIT License</a></div>
+    </ul>
     <h1>renderer</h1>
-    <table class=modal-window-table>
-      <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey>Version:</th><td id=user-agent class=modal-window-table-value></td>
-      </tr>
-    </table>
+    <ul class=note>
+      <li>
+        <div id=user-agent class="value"></div>
+    </ul>
   </article>
 </section>
 <article id="error">
