remove firefox dotted border

--- a/assets/app.html
+++ b/assets/app.html
@@ -90,7 +90,7 @@
           <div class="value switch"><input type="checkbox" id="appearance-background-image"><label for="appearance-background-image"></label></div>
         <li>
           <div class="description">Background image blur</div>
-          <select class="value" id="appearance-background-image-blur">
+          <select class="tool-select value" id="appearance-background-image-blur">
             <option value="0">0</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -127,7 +127,7 @@
           <div class="value switch"><input type="checkbox" id="show_volume"><label for="show_volume"></label></div>
         <li>
           <div class="description">Max volume</div>
-          <select class="value" id="max_volume">
+          <select class="tool-select value" id="max_volume">
             <option value="50">50</option>
             <option value="60">60</option>
             <option value="70">70</option>
