disable presto opera css animation

--- a/assets/app.html
+++ b/assets/app.html
@@ -86,6 +86,9 @@
           <div class="description">Dark</div>
           <div class="value switch"><input type="checkbox" id="appearance-dark"><label for="appearance-dark"></label></div>
         <li>
+          <div class="description">Animation</div>
+          <div class="value switch"><input type="checkbox" id="appearance-animation"><label for="appearance-animation"></label></div>
+        <li>
           <div class="description">Background image</div>
           <div class="value switch"><input type="checkbox" id="appearance-background-image"><label for="appearance-background-image"></label></div>
         <li>
