style: add auto hide scrollbar option

--- a/assets/app.html
+++ b/assets/app.html
@@ -106,6 +106,9 @@
           <li>
             <div class="description">Circled image</div>
             <div class="value switch"><input type="checkbox" id="appearance-circled-image"><label for="appearance-circled-image"></label></div>
+          <li>
+            <div class="description">Auto hide scrollbar</div>
+            <div class="value switch"><input type="checkbox" id="appearance-auto-hide-scrollbar"><label for="appearance-auto-hide-scrollbar"></label></div>
         </ul>
       </article>
       <article>
