style: remove background-overlay padding

--- a/assets/app.html
+++ b/assets/app.html
@@ -14,7 +14,7 @@
 <title>vv</title>
 </head>
 <body>
-<header class="background-overlay">
+<header>
   <ol id="menu-list">
     <li id=menu-back class=header-item>
       <svg class=header-icon width="40" height="40" viewBox="0 0 200 200">
@@ -42,9 +42,8 @@
       </svg>
   </ol>
 </header>
-<div id="background-image" class=fit></div>
-<div id="background" class=fit>
-  <div id="background-overlay" class=background-overlay></div>
+<div id="background-image" class=fit>
+  <div id="background-overlay" class="fit background-overlay"></div>
 </div>
 <section id="list" class="full">
   <ol id="list-items" class="note scrollable"></ol>
@@ -213,7 +212,7 @@
   </div>
 
 </div>
-<footer class=background-overlay>
+<footer>
   <nav id="control">
     <nav id="control-playback">
       <button class=control-button id=control-prev class=prev type="button" value="prev">
