feature: add keyboard shortcut(select/control) for list-view

--- a/assets/app.html
+++ b/assets/app.html
@@ -208,6 +208,18 @@
       <tr class=modal-window-tableitem>
         <th class=modal-window-tablekey><span class=keychar>&#xffeb;</span></th><td id=version class=modal-window-table-value>show now playing</td>
       </tr>
+      <tr class=modal-window-tableitem>
+        <th class=modal-window-tablekey><span class=keychar>&#xffeb;</span></th><td id=version class=modal-window-table-value>show now playing</td>
+      </tr>
+      <tr class=modal-window-tableitem>
+        <th class=modal-window-tablekey><span class=keychar>&#xffea;</span></th><td id=version class=modal-window-table-value>move list-view cursor to up</td>
+      </tr>
+      <tr class=modal-window-tableitem>
+        <th class=modal-window-tablekey><span class=keychar>&#xffec;</span></th><td id=version class=modal-window-table-value>move list-view cursor to down</td>
+      </tr>
+      <tr class=modal-window-tableitem>
+        <th class=modal-window-tablekey><span class=keychar>&#x23ce;</span></th><td id=version class=modal-window-table-value>activate list-view cursor item</td>
+      </tr>
     </table>
   </div>
 
