--- a/assets/app.html
+++ b/assets/app.html
@@ -195,7 +195,11 @@
 </div>
 <div id=modal-outer class=modal-outer>
   <div id=modal-help class=modal-window>
-    <button id=modal-help-close class=modal-close type="button" value="">close</button>
+    <button id=modal-help-close class=modal-close type="button" value="">
+      <svg class="close-icon" width="30" height="30" viewBox="0 0 200 200">
+        <path class="close-button stroke" d="M 40,40 160,160 M 160,40 40,160"/>
+      </svg>
+    </button>
     <h1>Help</h1>
     <h2>Keyboard Shortcuts</h2>
     <table class=modal-window-table>
