feature: add keyboard shortcut(play/pause/next/prev)

--- a/assets/app.html
+++ b/assets/app.html
@@ -204,22 +204,35 @@
     <h2>Keyboard Shortcuts</h2>
     <table class=modal-window-table>
       <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>?</span></th><td id=version class=modal-window-table-value>help</td>
+        <th class=modal-window-tablekey><span class=keychar>space</span></th><td id=version class=modal-window-table-value>play or pause song</td>
       </tr>
       <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>&#xffe9;</span></th><td id=version class=modal-window-table-value>show list / parent</td>
+        <th class=modal-window-tablekey><span class=keychar>&#x2303;</span><span class=keychar>&#x21E7;</span><span class=keychar>&#x2192;</span></th><td id=version class=modal-window-table-value>go to next song</td>
       </tr>
       <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>&#xffeb;</span></th><td id=version class=modal-window-table-value>show now playing</td>
+        <th class=modal-window-tablekey><span class=keychar>&#x2303;</span><span class=keychar>&#x21E7;</span><span class=keychar>&#x2190;</span></th><td id=version class=modal-window-table-value>go to previous song</td>
+      </tr>
+    </table>
+    <table class=modal-window-table>
+      <tr class=modal-window-tableitem>
+        <th class=modal-window-tablekey><span class=keychar>&#x2191;</span></th><td id=version class=modal-window-table-value>move list-view cursor to up</td>
       </tr>
       <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>&#xffea;</span></th><td id=version class=modal-window-table-value>move list-view cursor to up</td>
-      </tr>
-      <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>&#xffec;</span></th><td id=version class=modal-window-table-value>move list-view cursor to down</td>
+        <th class=modal-window-tablekey><span class=keychar>&#x2193;</span></th><td id=version class=modal-window-table-value>move list-view cursor to down</td>
       </tr>
       <tr class=modal-window-tableitem>
         <th class=modal-window-tablekey><span class=keychar>&#x23ce;</span></th><td id=version class=modal-window-table-value>activate list-view cursor item</td>
+      </tr>
+    </table>
+    <table class=modal-window-table>
+      <tr class=modal-window-tableitem>
+        <th class=modal-window-tablekey><span class=keychar>&#x2190;</span></th><td id=version class=modal-window-table-value>show list / parent</td>
+      </tr>
+      <tr class=modal-window-tableitem>
+        <th class=modal-window-tablekey><span class=keychar>&#x2192;</span></th><td id=version class=modal-window-table-value>show now playing</td>
+      </tr>
+      <tr class=modal-window-tableitem>
+        <th class=modal-window-tablekey><span class=keychar>?</span></th><td id=version class=modal-window-table-value>help</td>
       </tr>
     </table>
   </div>
