fix: error popup z-index

--- a/assets/app.html
+++ b/assets/app.html
@@ -187,9 +187,9 @@
     </article>
   </div>
 </section>
-<article id="error">
-  <h3 class="title">error title</h3>
-  <span class="description">error description</span>
+<article id="error" class="error-popup">
+  <h3 class="error-title">error title</h3>
+  <span class="error-description">error description</span>
 </article>
 <div id=modal-background class=modal-background>
 </div>
