feature: websocket connection

--- a/assets/app.html
+++ b/assets/app.html
@@ -77,6 +77,9 @@
         <ul class=note>
           <li>
             <button id=system-reload class="value button-simple" type="button">Reload Application</button>
+          <li>
+            <div class="description">WebSocket</div>
+            <div class="value switch"><input type="checkbox" id="system-use-websocket"><label for="system-use-websocket"></label></div>
         </ul>
       </article>
       <article>
