fix: background image blur edges

--- a/assets/app.html
+++ b/assets/app.html
@@ -42,7 +42,8 @@
       </svg>
   </ol>
 </header>
-<div id="background-image" class=fit>
+<div id="background" class=fit>
+  <div id="background-image"></div>
   <div id="background-overlay" class="fit background-overlay"></div>
 </div>
 <section id="list" class="full">
