feature: show websocket connection count

--- a/assets/app.html
+++ b/assets/app.html
@@ -169,6 +169,8 @@
           <div class="description">uptime:</div><div class="value" id=stat-uptime></div>
         <li>
           <div class="description">last library update:</div><div class="value" id=stat-db-update></div>
+        <li>
+          <div class="description">websockets:</div><div class="value" id=stat-websockets></div>
     </article>
     <article id="system-info" class="tab-page">
       <h1>vv</h1>
