fix: lost websocket connection

--- a/assets/app.html
+++ b/assets/app.html
@@ -193,9 +193,9 @@
     </article>
   </div>
 </section>
-<article id="error" class="error-popup">
-  <h3 class="error-title">error title</h3>
-  <span class="error-description">error description</span>
+<article id="popup" class="popup">
+  <h3 class="popup-title">title</h3>
+  <span class="popup-description">description</span>
 </article>
 <div id=modal-background class=modal-background>
 </div>
