fix: do not overwrite popup window title

--- a/assets/app.html
+++ b/assets/app.html
@@ -193,10 +193,8 @@
     </article>
   </div>
 </section>
-<article id="popup" class="popup">
-  <h3 class="popup-title">title</h3>
-  <span class="popup-description">description</span>
-</article>
+<section id="popup-box">
+</section>
 <div id=modal-background class=modal-background>
 </div>
 <div id=modal-outer class=modal-outer>
