--- a/assets/app.html
+++ b/assets/app.html
@@ -7,6 +7,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="Music">
 <link rel="apple-touch-icon" sizes="192x192" href="/assets/app.png">
+<link rel="apple-touch-startup-image" href="/assets/w.png">
 <meta name="mobile-web-app-capable" content="yes">
 <link rel="icon" sizes="192x192" href="/assets/app.png">
 <link rel="stylesheet" type="text/css" href="/assets/app.css">
