fix: remove loop unrolling in preferences code

--- a/assets/app.html
+++ b/assets/app.html
@@ -127,7 +127,7 @@
         <ul class=note>
           <li>
             <div class="description">Listview follows playback</div>
-            <div class="value switch"><input type="checkbox" id="playback_view_follow"><label for="playback_view_follow"></label></div>
+            <div class="value switch"><input type="checkbox" id="playback-view-follow"><label for="playback-view-follow"></label></div>
         </ul>
       </article>
       <article>
@@ -135,10 +135,10 @@
         <ul class=note>
           <li>
             <div class="description">Show volume nob</div>
-            <div class="value switch"><input type="checkbox" id="show_volume"><label for="show_volume"></label></div>
+            <div class="value switch"><input type="checkbox" id="volume-show"><label for="volume-show"></label></div>
           <li>
             <div class="description">Max volume</div>
-            <select class="tool-select value" id="max_volume">
+            <select class="tool-select value" id="volume-max">
               <option value="50">50</option>
               <option value="60">60</option>
               <option value="70">70</option>
