feature: change app color by cover image

--- a/assets/app.html
+++ b/assets/app.html
@@ -88,8 +88,8 @@
         <h3>Appearance</h3>
         <ul class=note>
           <li>
-            <div class="description">Dark</div>
-            <div class="value switch"><input type="checkbox" id="appearance-dark"><label for="appearance-dark"></label></div>
+            <div class="description">Color threshold</div>
+            <div class="value-expand"><input id=appearance-color-threshold type="range" min=0 max=256 step=1 class="config-range"></div>
           <li>
             <div class="description">Animation</div>
             <div class="value switch"><input type="checkbox" id="appearance-animation"><label for="appearance-animation"></label></div>
