fix: hide unsafe configs
* hide Animation in Opera
* hide Auto hide scrollbar in iOS

--- a/assets/app.html
+++ b/assets/app.html
@@ -90,7 +90,7 @@
           <li>
             <div class="description">Color threshold</div>
             <div class="value-expand"><input id=appearance-color-threshold type="range" min=0 max=256 step=1 class="config-range"></div>
-          <li>
+          <li id="config-appearance-animation">
             <div class="description">Animation</div>
             <div class="value switch"><input type="checkbox" id="appearance-animation"><label for="appearance-animation"></label></div>
           <li>
@@ -110,7 +110,7 @@
           <li>
             <div class="description">Circled image</div>
             <div class="value switch"><input type="checkbox" id="appearance-circled-image"><label for="appearance-circled-image"></label></div>
-          <li>
+          <li id="config-appearance-auto-hide-scrollbar">
             <div class="description">Auto hide scrollbar</div>
             <div class="value switch"><input type="checkbox" id="appearance-auto-hide-scrollbar"><label for="appearance-auto-hide-scrollbar"></label></div>
         </ul>
